# r21_Plus_PsrasmTest

./: .gitignore  LICENSE.txt  README.md  SCR-1.0.txt  SRAM_EMMC_BUILD_CHANGES.md  XSPI2_PSRAM_LCD_CHANGE_REPORT.md
RT700_GUI_ThermometerClock/: RT700_GUI_ThermometerClock.guiguider  SCR.txt  mcux_include.json
RT700_GUI_ThermometerClock/custom/: lv_conf_ext.h
RT700_GUI_ThermometerClock/sdk/Core/doc/: examples_shared_readme.md
RT700_GUI_ThermometerClock/sdk/Core/freertos/freertos-kernel/: middleware_freertos-kernel_config.cmake
RT700_GUI_ThermometerClock/sdk/Core/lvgl/: lv_conf_template.h  middleware_lvgl.cmake
RT700_GUI_ThermometerClock/sdk/Core/lvgl/src/draw/sw/blend/: lv_draw_sw_blend.c
RT700_GUI_ThermometerClock/sdk/Core/lvgl/src/drivers/windows/: lv_windows_context.h
RT700_GUI_ThermometerClock/sdk/Core/lvgl/src/misc/: lv_color.c  lv_color.h  lv_style.h
RT700_GUI_ThermometerClock/sdk/Core/lvgl/src/stdlib/: lv_mem.h
RT700_GUI_ThermometerClock/sdk/Core/source/: FreeRTOSConfig_Gen.h  display_support.c  display_support.h  lv_conf.h  pin_mux.c
RT700_GUI_ThermometerClock/sdk/armgcc/: CMakeLists.txt  all_lib_device.cmake  flags.cmake  flags.cmake_template
RT700_GUI_ThermometerClock/sdk/armgcc/startup/: device_startup.MIMXRT798S.cmake
RT700_GUI_ThermometerClock/sdk/iar/: lvgl_guider.ewp  lvgl_guider_ewp.template
RT700_GUI_ThermometerClock/sdk/iar/MIMXRT798S/iar/: MIMXRT798Sxxxx_cm33_core0_flash.icf
RT700_GUI_ThermometerClock/sdk/mcuxpresso/: .cproject  .project
RT700_GUI_ThermometerClock/sdk/mdk/: lvgl_guider.uvprojx  lvgl_guider_uvprojx.template
RT700_GUI_ThermometerClock/sdk/vscode/: CMakePresets.json  mcux_config.cmake  mcux_include.json
RT700_GUI_ThermometerClock/sdk/vscode/MIMXRT798S/armgcc/: MIMXRT798Sxxxx_cm33_core0_flash.ld
RT700_GUI_ThermometerClock/temp/: simulator.h
rt700_dual_core_low_power_thermometer/: .gitignore  script.jlink
rt700_dual_core_low_power_thermometer/armgcc/: CMakeLists.txt  FreeRTOSConfig_Gen.h  build_release.bat  build_release.sh  clean.sh  config.cmake  flags.cmake  mcux_config.h  mcux_include.json
rt700_dual_core_low_power_thermometer/armgcc/devices/RT/RT700/MIMXRT798S/gcc/: startup_MIMXRT798S_cm33_core0.S
rt700_dual_core_low_power_thermometer/armgcc/drivers/xspi/: fsl_xspi.c
rt700_dual_core_low_power_thermometer/armgcc/examples/_boards/mimxrt700evk/: board.c  board.h  core1_support.c  core1_support.h  display_support.c  display_support.h  lpm.h  pmic_support.c  pmic_support.h
rt700_dual_core_low_power_thermometer/armgcc/examples/_boards/mimxrt700evk/common/clock/cm33_core0/: clock_config.c
rt700_dual_core_low_power_thermometer/armgcc/examples/_boards/mimxrt700evk/lvgl_examples/: app.h  hardware_init.c  pin_mux.c  pin_mux.h
rt700_dual_core_low_power_thermometer/armgcc/examples/_boards/mimxrt700evk/lvgl_examples/linker/: MIMXRT798Sxxxx_cm33_core0_emmc.ld  MIMXRT798Sxxxx_cm33_core0_ram.ld  MIMXRT798Sxxxx_cm33_core0_sram.ld
rt700_dual_core_low_power_thermometer/armgcc/examples/_boards/mimxrt700evk/multicore_examples/: dsp_config.h
rt700_dual_core_low_power_thermometer/armgcc/examples/_boards/mimxrt700evk/vglite_examples/vglite_support/: pin_mux.h  vglite_support.c  vglite_support.h
rt700_dual_core_low_power_thermometer/armgcc/examples/_common/project_segments/freertos/examples/tickless/: fsl_tickless_ostimer.c
rt700_dual_core_low_power_thermometer/armgcc/examples/lvgl_examples/lvgl_guider/: lvgl_guider.c
rt700_dual_core_low_power_thermometer/armgcc/examples/lvgl_examples/lvgl_sdk/lvgl_support/rt700/: lvgl_support.c
rt700_dual_core_low_power_thermometer/armgcc/middleware/vglite/driver/VGLiteKernel/rtos/: vg_lite_hal.c
rt700_dual_core_low_power_thermometer/armgcc/middleware/vglite/driver/inc/: dumpAPI.h
rt700_dual_core_low_power_thermometer/armgcc/source/inc/: power_management.h
rt700_dual_core_low_power_thermometer/armgcc/source/src/: power_management.c
rt700_i3c_temp_sensor_core1/armgcc/: CMakeLists.txt  build_all.bat  build_all.sh  clean.bat  config.cmake  flags.cmake  mcux_config.h  mcux_include.json
rt700_i3c_temp_sensor_core1/armgcc/devices/RT/RT700/MIMXRT798S/gcc/: MIMXRT798Sxxxx_cm33_core1_ram.ld
rt700_i3c_temp_sensor_core1/armgcc/examples/_boards/mimxrt700evk/: board.c  board.h  display_support.h  lpm.h
rt700_i3c_temp_sensor_core1/armgcc/examples/_boards/mimxrt700evk/common/clock/cm33_core1/: clock_config.c  clock_config.h
rt700_i3c_temp_sensor_core1/armgcc/examples/_boards/mimxrt700evk/driver_examples/i3c/master_read_sensor_p3t1755/cm33_core1/: app.h  hardware_init.c  pin_mux.c
rt700_i3c_temp_sensor_core1/armgcc/examples/driver_examples/i3c/master_read_sensor_p3t1755/: i3c_master_read_sensor_p3t1755.c
rt700_i3c_temp_sensor_core1/armgcc/source/inc/: power_management.h
rt700_i3c_temp_sensor_core1/armgcc/source/src/: power_management.c
